# quiz

./: .gitignore  pyproject.toml
doc/decisions/: 0001-record-architecture-decisions.md  0002-use-poetry-as-package-management-tool.md  0003-use-django-as-frameword.md
quiz/: settings.py  urls.py
