[tool.poetry]
name = "quiz"
version = "0.1.0"
description = ""
authors = ["Tom Nguyen <tungnt620@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
